# warden

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  detection_issue.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
action/: README.md  action.yml
benchmark/: labels.yaml  refresh_fixtures.py  run_benchmark.py
benchmark/servers/GLips__Figma-Context-MCP/: NOTICE.md
benchmark/servers/GLips__Figma-Context-MCP/files/: CHANGELOG.md  CLAUDE.md  SECURITY.md  eslint.config.js  lefthook.yml  package.json  (+1 more)
benchmark/servers/github__github-mcp-server/: NOTICE.md
benchmark/servers/mendableai__firecrawl-mcp-server/: NOTICE.md
benchmark/servers/modelcontextprotocol__servers/: NOTICE.md
benchmark/servers/sooperset__mcp-atlassian/: NOTICE.md
benchmark/servers/supabase-community__supabase-mcp/: NOTICE.md
benchmark/servers/upstash__context7/: NOTICE.md
benchmark/servers/zcaceres__fetch-mcp/: NOTICE.md
docs/: architecture.md  rule-authoring.md  rules.md  sarif.md
examples/vulnerable-demo/: .mcp.json  README.md  manifest.json  requirements.txt  server.py
src/warden/: __init__.py  cli.py  engine.py  github_fetch.py  identity.py  llm_check.py  models.py  parsers.py  py_ast.py
src/warden/report/: __init__.py  human.py  json_report.py  sarif.py
src/warden/rules/: __init__.py  base.py  w001_tool_poisoning.py  w002_xpia.py  w003_credential_exposure.py  w004_over_privileged.py  w005_provenance.py  w006_session_risks.py  w007_covert_invocation.py
tests/: conftest.py  test_cli.py  test_engine_behavior.py  test_github_fetch.py  test_identity.py  test_llm_check_optional.py  test_report.py  test_rules_fixtures.py
(+253 files in other folders)
