[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "warden-mcp"
version = "0.1.0"
description = "Static security scanner for MCP (Model Context Protocol) servers — catches tool poisoning, prompt injection, leaked credentials, and over-broad permissions before an agent is wired to them."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.10"
authors = [{ name = "Warden Maintainers" }]
keywords = ["mcp", "model-context-protocol", "security", "sast", "sarif", "llm", "agent-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40.0"]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/sumyann/warden"
Repository = "https://github.com/sumyann/warden"
Issues = "https://github.com/sumyann/warden/issues"
Documentation = "https://github.com/sumyann/warden/blob/main/docs/rules.md"

[project.scripts]
warden = "warden.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/warden"]

[tool.ruff]
line-length = 220
target-version = "py310"
extend-exclude = ["benchmark/servers", "examples/vulnerable-demo"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
